Version 3.xxxx (March xx 2016)
- Implemented: Blockly/Lua Camera device, to send camera snapshots with subject after xx seconds
- Implemented: Custom Sensor
- Implemented: Dust Sensor (ug/m3)
- Implemented: Nefit Easy, User Mode (as switch, On=Clock, Off=Manual), Flow Temperature
- Implemented: OpenZWave, Aeotec ZWave+ USB Controller, Enable/Disable blinking mode (@Schmart, Thanks for the magic codes!)
- Implemented: OpenZWave, Node table, now also displays Manufacturer, Product ID and Product Type
- Implemented: RFXCom, Blinds T12 (Confexx)
- Changed: Stable ID generation for Philips Hue scenes (you need to delete all scenes and restart the hue hardware or domoticz)
- Fixed: Better handling of white listed commands/urls
- Fixed: Database backup is now only possible for admin users
- Fixed: Double checking command rights
- Fixed: Fix Off Delay not handled for Selector switch (#538).
- Fixed: Fix On/Off delays not saved on the selector switch edit form (#532).

Version 3.4834 (March 2nd 2016)
- Implemented: Blockly, now possible to use expressions in notifications/email/SMS like "My temperature is {{temperaturedevice[1234]}} degrees" (see http://www.domoticz.com/wiki/Events)
- Implemented: Blockly, now possible to send a notification with a user variable/device as subject/body
- Implemented: Chinese language support, big thanks to wxws!!
- Implemented: Custom Templates, now possible to directly call custom template pages (http://127.0.0.1:8080/#/Custom/mypage)
- Implemented: Day display in energy/gas/water/temp report
- Implemented: Dummy Hardware, Option to supply name, sensor is now also directly added to the system
- Implemented: Dummy Hardware, Wind+Temp+Chill
- Implemented: Dummy Hardware, option to create an RGBW switch
- Implemented: Extra timer-schedules: Odd/Even Days, Odd/Even Weeks, Monthly & Yearly
- Implemented: Hardware Monitor for FreeBSD (but it needs the libsysinfo package to work)
- Implemented: HTU21D(F)/SI702x Humidity+Temp I2C sensor (jvandenb)