@@ -151,6 +151,7 @@ enum _eHardwareTypes {
 	HTYPE_PanasonicTV,			//69
 	HTYPE_OpenWebNet,			//70
 	HTYPE_RaspberryHTU21D,		//71
+	HTYPE_AtagOne,				//72
 	HTYPE_END
 };
 
